--- a/settings/settings.html
+++ b/settings/settings.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>n8n Co Pilot</title>
+  <title>8pilot</title>
   <link rel="stylesheet" href="settings.css">
 </head>
 <body>
   <div class="ai-shimmer"></div>
   <div class="container">
-    <h1>n8n Co Pilot</h1>
+    <h1>8pilot</h1>
     <p>AI-powered assistant for building n8n workflows efficiently.</p>
     
     <div class="status-container">
