--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>n8n Co Pilot</title>
+  <title>8pilot</title>
   <link rel="stylesheet" href="sidepanel.css">
 </head>
 <body>
@@ -12,11 +12,10 @@
     <div class="sidepanel-header">
       <div class="header-title">
         <div class="title-icon">
-          <img src="../icons/icon48.png" alt="n8n Co Pilot" />
+          <img src="../icons/icon48.png" alt="8pilot" />
         </div>
         <div class="title-text">
-          <h1>n8n Co Pilot</h1>
-          <p>AI Workflow Assistant</p>
+          <h1 class="brand-title">8pilot</h1>
         </div>
       </div>
       <div class="header-controls">
@@ -63,10 +62,6 @@
       </div>
       <div class="workflow-details">
         <div class="workflow-name" id="workflow-name">No workflow detected</div>
-        <div class="workflow-stats" id="workflow-stats">
-          <span class="stat">0 nodes</span>
-          <span class="stat">0 connections</span>
-        </div>
         <div class="workflow-id" id="workflow-id">-</div>
       </div>
     </div>
