--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -1,27 +1,27 @@
 <!-- chatbot.html -->
-<div id="n8n-builder-chat" class="n8n-builder-container">
-  <div class="n8n-builder-header">
-    <span class="n8n-builder-title">n8n Co Pilot</span>
-    <div class="n8n-builder-controls">
-      <button id="n8n-builder-minimize" title="Minimize">_</button>
-      <button id="n8n-builder-close" title="Close">×</button>
+<div id="pilot-chat" class="pilot-container">
+  <div class="pilot-header">
+    <span class="pilot-title">8pilot</span>
+    <div class="pilot-controls">
+      <button id="pilot-minimize" title="Minimize">_</button>
+      <button id="pilot-close" title="Close">×</button>
     </div>
   </div>
-  <div class="n8n-builder-messages" id="n8n-builder-messages">
+  <div class="pilot-messages" id="pilot-messages">
     <!-- Messages will be added here dynamically -->
   </div>
-  <div class="n8n-builder-actions" id="n8n-builder-actions">
+  <div class="pilot-actions" id="pilot-actions">
     <!-- Action buttons and JSON handling will be added here dynamically -->
   </div>
-  <div class="n8n-builder-input-area">
-    <textarea id="n8n-builder-input" placeholder="Enter your request" rows="2"></textarea>
-    <button id="n8n-builder-send">Send</button>
+  <div class="pilot-input-area">
+    <textarea id="pilot-input" placeholder="Enter your request" rows="2"></textarea>
+    <button id="pilot-send">Send</button>
   </div>
-  <div class="n8n-builder-footer">
-    <div class="n8n-builder-status">
+  <div class="pilot-footer">
+    <div class="pilot-status">
       <span id="n8n-api-status" class="status-indicator"></span>
       <span id="n8n-api-status-text">API Status</span>
     </div>
-    <button id="n8n-builder-clear" title="Clear Chat" class="n8n-builder-clear-btn">Clear</button>
+    <button id="pilot-clear" title="Clear Chat" class="pilot-clear-btn">Clear</button>
   </div>
 </div>
