--- a/settings/settings.html
+++ b/settings/settings.html
@@ -19,6 +19,7 @@
     <div class="buttons">
       <button id="show-chat">Show AI Assistant</button>
       <button id="settings-btn">⚙️</button>
+      <button id="logout-btn">🚪</button>
     </div>
     
     <div id="settings-panel" class="settings-panel hidden">
