logout button added

--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -286,16 +286,7 @@
           </div>
         </div>
 
-        <!-- Backend Configuration Section -->
-        <div class="settings-section">
-          <h4>Backend Configuration</h4>
-          <div class="form-group">
-            <label for="backend-url">Backend API URL</label>
-            <input type="text" id="backend-url" placeholder="http://localhost:8000">
-            <small>URL of your 8pilot backend server</small>
-          </div>
-          <button id="test-backend-btn" class="secondary-btn">Test Backend Connection</button>
-        </div>
+
 
         <!-- n8n Integration Section -->
         <div class="settings-section">
@@ -340,6 +331,7 @@
         <div class="settings-actions">
           <button id="save-settings-btn" class="primary-btn">Save Settings</button>
           <button id="reset-settings-btn" class="danger-btn">Reset to Defaults</button>
+          <button id="logout-settings-btn" class="danger-btn">Logout</button>
         </div>
       </div>
     </div>
