api key became system

--- a/auth.html
+++ b/auth.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>8pilot - Авторизация</title>
+  <script src="config.js"></script>
   <style>
     /* 8pilot Brand Colors - Light Theme */
     :root {
