--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -193,6 +193,43 @@
     <div class="content-area">
       <!-- Chat Tab -->
       <div class="tab-content active" id="chat-tab">
+        <!-- N8N Connection Banner -->
+        <div id="n8n-connection-banner" class="n8n-banner hidden">
+          <div class="n8n-banner-content">
+            <div class="n8n-banner-icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <div class="n8n-banner-info">
+              <div class="n8n-banner-header">
+                <h3 class="n8n-banner-title">Подключите n8n для полной функциональности</h3>
+                <div id="n8n-detected-badge" class="n8n-detected-badge hidden">Обнаружен n8n</div>
+              </div>
+              <p class="n8n-banner-description" id="n8n-banner-description">
+                Создавайте и управляйте рабочими процессами прямо из чата
+              </p>
+              <div class="n8n-banner-actions">
+                <button id="n8n-setup-auto" class="n8n-setup-btn primary">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Настроить автоматически
+                  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                </button>
+                <button id="n8n-setup-later" class="n8n-setup-btn secondary">Позже</button>
+              </div>
+            </div>
+            <button id="n8n-banner-close" class="n8n-banner-close">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 6L6 18M6 6l12 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </button>
+          </div>
+        </div>
+
         <div class="chat-messages" id="chat-messages">
           <!-- Messages will be added dynamically -->
         </div>
@@ -333,6 +370,148 @@
           <button id="save-settings-btn" class="primary-btn">Save Settings</button>
           <button id="reset-settings-btn" class="danger-btn">Reset to Defaults</button>
           <button id="logout-settings-btn" class="danger-btn">Logout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- N8N Setup Modal -->
+  <div id="n8n-setup-modal" class="n8n-modal hidden">
+    <div class="n8n-modal-content">
+      <!-- Modal Header -->
+      <div class="n8n-modal-header">
+        <div class="n8n-modal-title-section">
+          <div class="n8n-modal-icon">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+          <div>
+            <h3 class="n8n-modal-title">Настройка n8n</h3>
+            <p class="n8n-modal-subtitle">Быстрая настройка за 3 шага</p>
+          </div>
+        </div>
+        <button id="n8n-modal-close" class="n8n-modal-close">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M18 6L6 18M6 6l12 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Modal Body -->
+      <div class="n8n-modal-body">
+        <!-- Progress Steps -->
+        <div class="n8n-setup-steps">
+          <div class="step-item" id="step-detect">
+            <div class="step-number">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <span>1</span>
+            </div>
+            <div class="step-content">
+              <span class="step-title">Обнаружение n8n</span>
+            </div>
+          </div>
+          <div class="step-item" id="step-api">
+            <div class="step-number">
+              <span>2</span>
+            </div>
+            <div class="step-content">
+              <span class="step-title">Создание API ключа</span>
+            </div>
+          </div>
+          <div class="step-item" id="step-connect">
+            <div class="step-number">
+              <span>3</span>
+            </div>
+            <div class="step-content">
+              <span class="step-title">Подключение</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Step Content -->
+        <div class="n8n-step-content">
+          <!-- Step 1: Detection -->
+          <div id="step-detect-content" class="step-content-panel active">
+            <div class="step-success-card">
+              <div class="success-icon">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+              <div class="success-content">
+                <h4>n8n обнаружен!</h4>
+                <p>Найден ваш экземпляр: <span id="detected-url">-</span></p>
+                <button id="continue-setup" class="n8n-btn primary">Продолжить настройку</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Step 2: API Setup -->
+          <div id="step-api-content" class="step-content-panel">
+            <div class="step-info-card">
+              <h4>Создание API ключа</h4>
+              <p>Следуйте инструкциям для создания API ключа:</p>
+              <ol class="instructions-list">
+                <li>Нажмите "Create an API Key"</li>
+                <li>Введите название: "8pilot Integration"</li>
+                <li>Выберите срок действия</li>
+                <li>Нажмите "Save"</li>
+                <li>Скопируйте полученный ключ</li>
+              </ol>
+              <button id="open-api-settings" class="n8n-btn primary">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Открыть настройки API
+              </button>
+            </div>
+          </div>
+
+          <!-- Step 3: Connection -->
+          <div id="step-connect-content" class="step-content-panel">
+            <div class="step-form-card">
+              <h4>API Ключ</h4>
+              <div class="form-group">
+                <div class="input-with-action">
+                  <input type="password" id="api-key-input" placeholder="Вставьте ваш API ключ здесь" class="n8n-input">
+                  <button id="paste-api-key" class="paste-btn" title="Вставить из буфера">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M16 4h2a2 2 0 012 2v14a2 2 0 01-2 2H6a2 2 0 01-2-2V6a2 2 0 012-2h2M16 4a2 2 0 00-2-2h-4a2 2 0 00-2 2M16 4a2 2 0 012 2v2H6V6a2 2 0 012-2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+              <button id="test-connection" class="n8n-btn primary" disabled>
+                <span id="test-connection-text">Подключить n8n</span>
+                <svg id="test-connection-loader" class="hidden spinner" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M21 12a9 9 0 11-6.219-8.56" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+
+          <!-- Step Success -->
+          <div id="step-success-content" class="step-content-panel">
+            <div class="step-success-card final">
+              <div class="success-icon">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+              <div class="success-content">
+                <h4>Успешно подключено!</h4>
+                <p>Теперь вы можете создавать рабочие процессы через чат.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Manual Setup Option -->
+        <div class="n8n-modal-footer">
+          <button id="manual-setup" class="n8n-btn ghost">Настроить вручную</button>
         </div>
       </div>
     </div>
