--- a/popup-final.html
+++ b/popup-final.html
@@ -193,12 +193,13 @@
             display: none;
             align-items: center;
             justify-content: center;
-            font-size: 12px;
+            font-size: 14px;
             font-weight: 600;
             transition: all 0.3s ease;
-            padding: 8px 16px;
-            margin: 15px auto 10px;
+            padding: 12px 24px;
+            margin: 20px auto 15px;
             width: fit-content;
+            min-width: 120px;
         }
 
         .deactivate-btn.active {
@@ -740,7 +741,7 @@
             <div class="activate-section" id="activateSection">
                 <div class="status-display" id="statusDisplay">
                     <div class="status-icon">✓</div>
-                    <div class="status-text">n8nChat is activated</div>
+                    <div class="status-text">8pilot is activated</div>
                 </div>
                 <div class="section-description" id="sectionDescription">
                     Self-hosting? Navigate to your workflow, then activate the extension by pressing the button below:
