settings section decreaed

--- a/popup-final.html
+++ b/popup-final.html
@@ -30,8 +30,8 @@
         /* Header Logo */
         .header {
             text-align: center;
-            margin-bottom: 25px;
-            padding: 20px 0;
+            margin-bottom: 5px;
+            padding: 20px 0 10px 0;
         }
 
         .logo-container {
@@ -79,7 +79,7 @@
             background: #111111;
             border-radius: 12px;
             padding: 20px;
-            margin-bottom: 20px;
+            margin-bottom: 5px;
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -239,7 +239,7 @@
             font-weight: 600;
             color: #e4e4e7;
             margin-bottom: 10px;
-            margin-top: 10px;
+            margin-top: 0px;
         }
 
         /* Navigation Tabs */
