--- a/popup-final.html
+++ b/popup-final.html
@@ -85,34 +85,13 @@
             overflow: hidden;
         }
 
-        .activate-section::before {
-            content: '';
-            position: absolute;
-            top: -3px;
-            left: -3px;
-            right: -3px;
-            bottom: -3px;
-            background: conic-gradient(from 0deg, #4fd1c7, #06b6d4, #4fd1c7, #06b6d4, #4fd1c7);
-            border-radius: 15px;
-            z-index: -1;
-            animation: neonRotate 3s linear infinite;
+        .activate-section:not(.activated) {
+            border: 1px solid #4fd1c7;
         }
 
-        @keyframes neonRotate {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .activate-section::after {
-            content: '';
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            right: -1px;
-            bottom: -1px;
-            background: #111111;
-            border-radius: 13px;
-            z-index: -1;
+        .activate-section.activated {
+            border: 1px solid #27272a;
+            padding: 15px;
         }
 
         .section-title {
@@ -217,6 +196,10 @@
             font-size: 12px;
             color: #71717a;
             margin-bottom: 10px;
+        }
+
+        .activate-section.activated .auto-note {
+            display: none;
         }
 
         .hosted-link {
