multi activation implemeented

--- a/popup-final.html
+++ b/popup-final.html
@@ -118,8 +118,9 @@
             font-size: 14px;
             cursor: pointer;
             transition: all 0.3s ease;
-            width: 100%;
-            margin-bottom: 15px;
+            width: 200px;
+            margin: 0 auto 15px auto;
+            display: block;
         }
 
         .activate-btn:hover {
@@ -727,10 +728,10 @@
                     <div class="status-text">8pilot is activated</div>
                 </div>
                 <div class="section-description" id="sectionDescription">
-                    Self-hosting? Navigate to your workflow, then activate the extension by pressing the button below:
+                    Activate the extension to enable AI assistance on n8n workflow pages:
                 </div>
                 <button class="activate-btn" id="activateBtn">
-                    Activate on Current Page
+                    Activate
                 </button>
                 
                 <!-- Deactivate Button -->
