--- a/popup-final.html
+++ b/popup-final.html
@@ -827,9 +827,9 @@
                     </div>
                     
                     <div class="form-group full-width">
-                        <label class="form-label">OpenAI API Key</label>
-                        <input type="password" class="form-input" id="apiKey" placeholder="Enter your OpenAI API key">
-                        <div class="help-links">
+                        <label class="form-label" id="apiKeyLabel">OpenAI API Key</label>
+                        <input type="password" class="form-input" id="apiKey" placeholder="Enter your API key">
+                        <div class="help-links" id="helpLinks">
                             <a href="https://platform.openai.com/api-keys" target="_blank" class="help-link">Get OpenAI API Key ↗</a>
                             <div class="help-text">You must have valid <a href="https://platform.openai.com/settings/organization/billing/payment-methods" target="_blank" class="help-link">billing information ↗</a> setup with OpenAI</div>
                             <a href="https://www.youtube.com/watch?v=w6LbUiVMl8g" target="_blank" class="help-link">Not working? Watch setup tutorial ↗</a>
