--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -270,6 +270,9 @@
                   <polygon points="22,2 15,22 11,13 2,9"/>
                 </svg>
               </button>
+              <button id="loading-btn" class="action-btn loading" title="Stop generation" style="display: none;">
+                <div class="loading-square"></div>
+              </button>
             </div>
           </div>
         </div>
