community button added

--- a/popup-final.html
+++ b/popup-final.html
@@ -865,7 +865,7 @@
                     <p>Learn how to use 8pilot with comprehensive guides and tutorials</p>
                 </div>
 
-                <div class="support-item">
+                <div class="support-item" id="communityItem">
                     <h4>Community</h4>
                     <p>Join our Discord server to connect with other users and get help</p>
                 </div>
