get started tutorial added

--- a/popup-final.html
+++ b/popup-final.html
@@ -925,7 +925,7 @@
                         <div class="help-links" id="helpLinks">
                             <a href="https://platform.openai.com/api-keys" target="_blank" class="help-link">Get OpenAI API Key ↗</a>
                             <div class="help-text">You must have valid <a href="https://platform.openai.com/settings/organization/billing/payment-methods" target="_blank" class="help-link">billing information ↗</a> setup with OpenAI</div>
-                            <a href="https://www.youtube.com/watch?v=w6LbUiVMl8g" target="_blank" class="help-link">Not working? Watch setup tutorial ↗</a>
+                            <a href="https://youtu.be/mJGzPuqwGBY" target="_blank" class="help-link">Not working? Watch setup tutorial ↗</a>
                         </div>
                     </div>
                 </div>
